<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:background="@color/activity_background"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:id="@+id/scrollViewRunResource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewRunTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <TextView
                    android:id="@+id/tvRunTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textStyle="italic"
                    android:textColor="@color/custom_text_color"
                    android:textSize="22sp"
                    />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewDilligence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >

                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="3dp">

                    <TextView
                        android:id="@+id/tvRunTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:text="@string/you_are_pioneer"
                        android:textColor="@color/custom_text_color"
                        android:textSize="15sp"
                        android:textStyle="italic"
                        />

                    <TextView
                        android:id="@+id/tvDiligence"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:text="@string/attendance_zero"
                        android:textColor="@color/custom_text_color"
                        android:textSize="15sp"
                        android:textStyle="italic"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewRun"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                >


                <ImageButton
                    android:id="@+id/run_resource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@mipmap/ic_start_brown"
                    android:contentDescription="@string/run_resource"
                    android:layout_margin="5dp"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewRunGrade"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <org.eazegraph.lib.charts.PieChart
                    android:id="@+id/piechart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    app:egLegendTextSize="20sp"
                    app:egUsePieRotation="true"
                    app:egValueTextSize="20sp"
                    android:layout_margin="10dp"/>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/cardViewThumbs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="3dp"
                    >

                    <TextView
                        android:id="@+id/tvAvgBallExplanation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:text="@string/estimate_resource_to_continue"
                        android:textColor="@color/custom_text_color"
                        android:textSize="15sp"
                        android:textStyle="italic"
                        />

                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/linear_grade"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="3dp">

                    <ImageButton
                        android:id="@+id/imgThumbDown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:background="@mipmap/ic_thumb_down"
                        android:contentDescription="@string/grade_bad"
                        android:paddingBottom="20dp"/>

                    <ImageButton
                        android:id="@+id/imgThumbUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:background="@mipmap/ic_thumb_up"
                        android:contentDescription="@string/grade_good"
                        android:paddingBottom="20dp"/>
                </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

