<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewFinish"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/exp_Rel_Lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/finish_exp_list_item"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:textColor="@color/custom_text_color"
            android:textSize="17sp"
            android:textStyle="italic"
            />

        <LinearLayout
            android:id="@+id/linearLayoutExpImg1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/finish_exp_list_item"
            android:orientation="horizontal"
            android:weightSum="99"
            >

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:orientation="horizontal"

                >

                <ImageView
                    android:id="@+id/commentInExp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_comment"
                    android:contentDescription="@string/description_comments"/>

                <TextView
                    android:id="@+id/commentInExpText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"

                    android:textStyle="italic"/>
            </LinearLayout>


            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33"

                android:gravity="center"

                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/thumbDownExp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_thumb_down"
                    android:contentDescription="@string/description_grade_bad"/>

                <ImageView
                    android:id="@+id/thumbUpExp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_thumb_up"
                    android:contentDescription="@string/description_grade_good"
                    />
            </LinearLayout>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:gravity="center|end"

                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/diligence_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_action_diligence_low"
                    />

                <ImageView
                    android:id="@+id/diligence_middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_action_diligence_middle"
                    />

                <ImageView
                    android:id="@+id/diligence_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_action_diligence_high"
                    />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
